2001-06-08  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-w3m-retrieve): Remove URL's fragment before checking
	cache.

2001-06-08  Yuuichi Teranishi  <teranisi@gohome.org>

	* shimbun/shimbun.el (shimbun): Removed slot `use-entire-index'.
	(shimbun-mua::shimbun-mua-use-entire-index): Abolish.
	(shimbun-open): Don't setup `use-entire-index' slot.

	* shimbun/sb-slashdot-jp.el (shimbun-make-contents):
	Decide charset dynamically.

2001-06-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-xmas.el (w3m-unoptimize-animated-gif): Truncate an animated
	gif to have only one frame when the size is larger than the value
	of `w3m-animated-gif-maximum-size'.
	(w3m-animated-gif-maximum-size): New variable.

2001-06-06  Kenichi OKADA  <okada@opaopa.org>

	* w3m-xmas.el: Require `path-util'.

2001-06-07  NAKAJIMA Mikio <minakaji@osaka.email.ne.jp>

	* w3m.el (w3m-exec-process): Replace `delete' with `delq'.

2001-06-07  Yuuichi Teranishi  <teranisi@gohome.org>

	* shimbun/sb-airs.el (shimbun-get-headers): Added optional argument
	`range'.
	* shimbun/sb-airs.el (shimbun-get-headers): Ditto.
	* shimbun/sb-asahi.el (shimbun-get-headers): Ditto.
	* shimbun/sb-cnet.el (shimbun-get-headers): Ditto.
	* shimbun/sb-fml.el (shimbun-get-headers): Ditto.
	* shimbun/sb-glimpse.el (shimbun-get-headers): Ditto.
	* shimbun/sb-gnome.el (shimbun-get-headers): Ditto.
	* shimbun/sb-h14m.el (shimbun-get-headers): Ditto.
	* shimbun/sb-hns.el (shimbun-get-headers): Ditto.
	* shimbun/sb-impress.el (shimbun-get-headers): Ditto.
	* shimbun/sb-mainichi.el (shimbun-get-headers): Ditto.
	* shimbun/sb-mew.el (shimbun-get-headers): Ditto.
	* shimbun/sb-mhonarc.el (shimbun-get-headers): Ditto.
	* shimbun/sb-namazu.el (shimbun-get-headers): Ditto.
	* shimbun/sb-netbsd.el (shimbun-get-headers): Ditto.
	* shimbun/sb-nikkei.el (shimbun-get-headers): Ditto.
	* shimbun/sb-ruby.el (shimbun-get-headers): Ditto.
	* shimbun/sb-sponichi.el (shimbun-get-headers): Ditto.